zdaemon Changelog
*****************

zdaemon 2.0.3 (unreleased)
==========================

- Added support to bootstrap on Jython.

Bugs Fixed
----------

- No longer uses a hardcoded filename (/tmp/demo.zdsock) in unit tests.
  This lets you run the tests on Python 2.4 and 2.5 simultaneously without
  spurious errors.


zdaemon 2.0.2 (2008/04/05)
==========================

Bugs Fixed
----------

Fixed backwards incompatible change in handling of environment option.

zdaemon 2.0.1 (2007/10/31)
==========================

Bugs Fixed
----------

Fixed test renormalizer that did not work in certain cases where the
environment was complex.

zdaemon 2.0.0 (2007/07/19)
==========================

Final release for 2.0.0.

zdaemon 2.0a6 (2007/01/11)
==========================

Bugs Fixed
----------

- When the user option was used, it only affected running the daemon.

zdaemon 2.0a3, 2.0a4, 2.0a5 (2007/01/10)
========================================

Bugs Fixed
----------

- The new (2.0) mechanism used by zdaemon to start the daemon manager
  broke some applications that extended zdaemon.

- Added extra checks to deal with programs that extend zdaemon
  and copy the schema and thus don't see updates to the ZConfig schema.

zdaemon 2.0a2 (2007/01/10)
==========================

New Features
------------

- Added support for setting environment variables in the configuration
  file.  This is useful when zdaemon is used to run programs that need
  environment variables set (e.g. LD_LIBRARY_PATH).

- Added a command to rotate the transcript log.

zdaemon 2.0a1 (2006/12/21)
==========================

Bugs Fixed
----------

- In non-daemon mode, start hung, producing annoying dots
  when the program exited.

- The start command hung producing annoying dots if the deamon failed
  to start.

- foreground and start had different semantics because one used
  os.system and another used os.spawn

New Features
------------

- Documentation
